--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,14 +2,30 @@
     box-sizing: border-box;
 }
 
+@keyframes slide {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 100% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
 body {
-    background-color: #ffffff;
-    color: #3a3a3a;
+    background-image: url('/backg.jpg');
+    background-repeat: repeat-x;
+    animation: slide 90s linear infinite;
+    height: 100vh;
+    color: #2e2e2e;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 80vh;
     margin: 0;
     overflow: hidden;
 }
@@ -19,7 +35,13 @@ body {
     width: 100%;
     padding: 20px 30px;
     box-sizing: border-box;
+    background: #a77d7d;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+    margin-top: 5%;
+
 }
+
 
 h1 {
     margin: 20px 0 0;
